fix: Resolve spacing between list items

--- a/src/css/components/edit-box/edit-list-item.css
+++ b/src/css/components/edit-box/edit-list-item.css
@@ -13,6 +13,7 @@
 
 	border-radius: 0.3rem;
 	padding: 0.3rem 0.5rem;
+	margin: 0.2rem 0.3rem;
 
 	background: var(--bg-color);
 	border: solid var(--border-width) var(--border-color);
